...
                                            <action selector="counterMinusButtonTapped:" destination="vOl-Rw-h5s" eventType="touchUpInside" id="uFI-0D-NGb"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sge-Jo-GGH">
                                        <rect key="frame" x="0.0" y="195" width="43" height="44"/>
                                        <animations/>
                                        <accessibility key="accessibilityConfiguration" identifier="Health Minus Five Action"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                        <state key="normal" title="5">
                                            <color key="titleColor" red="0.59068226440000005" green="0.07010461992" blue="0.3004954574" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="counterMinusFiveButtonTapped:" destination="vOl-Rw-h5s" eventType="touchUpInside" id="KY0-dv-35n"/>
...
                                    <constraint firstItem="JqQ-3h-Ret" firstAttribute="centerY" secondItem="EAY-FP-7sJ" secondAttribute="centerY" id="rce-9y-bi7"/>
                                </constraints>
                                <connections>
                                    <outletCollection property="gestureRecognizers" destination="ePI-aW-kaT" appends="YES" id="rnK-i2-l6C"/>
                                </connections>
                            </view>
                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3U0-af-W45" userLabel="Health Defeat Overlay">
                                <rect key="frame" x="16" y="0.0" width="238" height="270"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU ARE DEFEATED" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSs-ut-L4R">
                                        <rect key="frame" x="63" y="84" width="111" height="102"/>
                                        <animations/>
                                        <constraints>
...
